created item form

--- a/src/main/java/lk/ijse/gdse65/pos_system_spring/index.html
+++ b/src/main/java/lk/ijse/gdse65/pos_system_spring/index.html
@@ -41,7 +41,7 @@
                 </li>
                 <li class="nav-item">
                     <img src="assets/img/open_delivered_box_50px.png" alt="itemicon">
-                    <a class="nav-link active item-nav" id="nav-item" href="#">Item</a>
+                    <a class="nav-link active item-nav" id="item-nav" href="#">Item</a>
                 </li>
                 <li class="nav-item">
                     <img src="assets/img/buy_24px.png" alt="ordericon">
@@ -207,7 +207,7 @@
                     <button id="save_item" type="button" class="btn btn-outline-success">Save</button>
                     <button id="update_item" type="button" class="btn btn-outline-warning">Update</button>
                     <button id="delete_item" type="button" class="btn btn-outline-danger">Delete</button>
-                    <button id="item_reset" type="reset" class="btn btn-outline-secondary">Reset</button>
+                    <button id="item-reset" type="reset" class="btn btn-outline-secondary">Reset</button>
                 </div>
 
 
@@ -379,12 +379,8 @@
 
 <!--Link Controllers-->
 <script type="module" src="javaScript/MenuController.js"></script>
-<!--<script type="module" src="controller/customer_page_controller.js"></script>-->
-<!--<script type="module" src="controller/item_page_controller.js"></script>-->
-<!--<script type="module" src="controller/order_page_controller.js"></script>-->
-<!--<script type="module" src="controller/recent_order_page_controller.js"></script>-->
 <script src="javaScript/Customer.js"></script>
-<!--<script src="javaScript/Item.js"></script>-->
+<script src="javaScript/Item.js"></script>
 <!--<script src="javaScript/order.js"></script>-->
 
 
