created order form

--- a/src/main/java/lk/ijse/gdse65/pos_system_spring/index.html
+++ b/src/main/java/lk/ijse/gdse65/pos_system_spring/index.html
@@ -307,9 +307,9 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">Order ID</th>
+                <th scope="col">Item ID</th>
                 <th scope="col">Desc</th>
-                <th scope="col">Qty.</th>
+                <th scope="col">Qty</th>
                 <th scope="col">Total</th>
 
             </tr>
@@ -330,7 +330,7 @@
 
             <div class="col-auto">
                 <label for="final_total" class="form-label">Total</label>
-                <input id="final_total" type="text" class="form-control" id="final_total"
+                <input id="final_total" type="text" class="form-control"
                        aria-describedby="emailHelp" readonly>
             </div>
             <button id="place_ord" type="button" class="btn btn-outline-success">Place Order</button>
@@ -381,7 +381,7 @@
 <script type="module" src="javaScript/MenuController.js"></script>
 <script src="javaScript/Customer.js"></script>
 <script src="javaScript/Item.js"></script>
-<!--<script src="javaScript/order.js"></script>-->
+<script src="javaScript/order.js"></script>
 
 
 <!-- alert type -->
